# TP-C-Homework_2

./: .travis.yml  CMakeLists.txt  README.md
include/: triangle_matrix.h
src/: main.c  tm_sum_cons.c  tm_sum_parallel.c  triangle_matrix.c
stress_tests/include/: stress_test.h
stress_tests/src/: create_matrix_file.c  stress_test.c  stress_test_cons.c  stress_test_parallel.c
time_tests/include/: time_test.h
time_tests/src/: time_test.c  time_test_cons.c  time_test_parallel.c
unit_tests/: CMakeLists.txt  cons_test.cpp  main.cpp  multithread_test.cpp
